<resources>
    <string name="app_name">Student Tracker  - Meneahel school</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="back">back</string>
    <string name="add_student">Add student</string>
    <string name="evaluate_student">Evaluate student</string>

    <string name="save">save</string>
    <string name="delete">Delete</string>
    <string name="name">Full Name</string>
    <string name="grade">Grade</string>
    <string name="section">Section</string>
    <string name="label">Describtion</string>


</resources>