<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable



            name="viewmodel"
            type="com.haldun.android.student.studentInfo.StudentInfoViewMode" />

        <variable
            name="student"
            type="com.haldun.android.student.database.Student" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/storeName_lable"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/storeCode_lable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/storeCode_lable"
            style="Label_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grade"


            app:layout_constraintBottom_toTopOf="@+id/storeAddress_lable"
            app:layout_constraintStart_toStartOf="@+id/storeName_lable"
            app:layout_constraintTop_toBottomOf="@+id/storeName_lable" />

        <TextView
            android:id="@+id/storeAddress_lable"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section"

            app:layout_constraintBottom_toTopOf="@+id/save_store_button"
            app:layout_constraintStart_toStartOf="@+id/storeCode_lable"
            app:layout_constraintTop_toBottomOf="@+id/storeCode_lable" />

        <EditText
            android:id="@+id/storeName_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={viewmodel.student.studentName}"

            app:layout_constraintBaseline_toBaselineOf="@+id/storeName_lable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.704"
            app:layout_constraintStart_toEndOf="@+id/storeName_lable" />

        <EditText
            android:id="@+id/storeCode_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={viewmodel.student.studentGrade}"

            app:layout_constraintBaseline_toBaselineOf="@+id/storeCode_lable"
            app:layout_constraintStart_toStartOf="@+id/storeName_input"


            />

        <EditText
            android:id="@+id/storeAddress_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={viewmodel.student.studentSubGrade}"

            app:layout_constraintBaseline_toBaselineOf="@+id/storeAddress_lable"
            app:layout_constraintStart_toStartOf="@+id/storeCode_input" />

        <Button
            android:id="@+id/save_store_button"
            style="@style/StudentButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewmodel.onInsert(student)}"

            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/back_store_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/storeAddress_input"
            app:layout_constraintVertical_bias="0.259" />

        <Button
            android:id="@+id/delete_store_button"
            style="@style/StudentButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/delete"
            app:layout_constraintBaseline_toBaselineOf="@+id/back_store_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/back_store_button" />

        <Button
            android:id="@+id/back_store_button"
            style="@style/StudentButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/back"
            app:layout_constraintEnd_toStartOf="@+id/delete_store_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/save_store_button"
            app:layout_constraintTop_toTopOf="@+id/save_store_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>