<?xml version="1.0" encoding="utf-8"?>
    <layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
        <data>
            <variable
                name="evaluationTrackerViewModel"
                type="com.haldun.android.student.evaluationtracker.EvaluationTrackerViewModel" />

        </data>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".evaluationtracker.EvaluationTrackerFragment">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/evaluations_student_list"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="48dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/bak_button"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/start_button" />


            <Button
                android:id="@+id/start_button"
                style="@style/StudentButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"

                android:text="@string/add_student"
                android:visibility="invisible"
                app:layout_constraintBaseline_toBaselineOf="@id/stop_button"
                app:layout_constraintEnd_toStartOf="@+id/stop_button"
                app:layout_constraintHorizontal_bias="0.55"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/stop_button"
                style="@style/StudentButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:onClick="@{}"
                android:text="@string/evaluate_student"

                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/start_button"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/bak_button"
                style="@style/StudentButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                android:text="@string/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </layout>
